fixed product card text alignment

--- a/frontend.css
+++ b/frontend.css
@@ -60,7 +60,7 @@
     background-color: #333;
 }
 
-
+/*
 .tourcards {
     display: flex;
     width: 90%;
@@ -78,7 +78,7 @@
     box-sizing: border-box;
     margin-top: 14px;
 
-}
+}*/
 
 .tourcard img {
     border-radius: 5px;
@@ -86,6 +86,32 @@
 
 .tourcard span {
     letter-spacing: 1.5px;
+}
+
+.tourcards {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 90%;
+  margin:auto;
+  background: goldenrod;
+  border-radius: 10px;
+}
+
+.tourcard {
+  width: var(--cardWidth);
+  /*  height: var(--cardHeight);*/
+  margin: var(--cardMargin);
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background: #fff;
+  box-sizing: border-box;
+  padding: 5px;
+
+}
+
+.tourcard img {
+  width: 100%;
 }
 
 
@@ -117,7 +143,7 @@ p {
     font-size: 1em;
     line-height: 1.7;
     font-weight: 300;
-    color: var(--text-gray);
+/*    color: var(--text-gray);*/
 }
 
 .description {
